# aws-auto-record-uploader

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  README.md  compose.yaml  config.json  copy_usb.ps1  pyproject.toml  run.bat  run.ps1  run.sh
src/: .dockerignore  Dockerfile  config.json  copy_usb.ps1  docker-compose.yml  main.py
src/aws_auto_record_uploader/: __init__.py  app.py  audio_files.py  cli.py  config.py  s3_upload.py  staging.py  transcription.py
tests/: test_app.py  test_audio_files.py  test_cli.py  test_config.py  test_s3_upload.py  test_staging.py  test_transcription.py
